<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3">

    <EditText
        android:id="@+id/id_edit_text"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/ID"
        android:inputType="number" />

    <com.mikhailbiltsevich.customview.ClearableAutoCompleteTextView
        android:id="@+id/firstname_auto_complete_text_view"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="1" />

    <Button
        android:id="@+id/to_toast_button"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_vertical|fill_horizontal|center"
        android:layout_row="1"
        android:layout_rowSpan="2"
        android:allowUndo="false"
        android:text="@string/toToast" />

    <EditText
        android:id="@+id/surname_edit_text"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="2"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/patronymic_edit_text"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="3"
        android:ems="10"
        android:hint="@string/patronymic"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/address_edit_text"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="4"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/credit_card_edit_text"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="5"
        android:ems="10"
        android:hint="@string/creditCard"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/debit_edit_text"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="6"
        android:ems="10"
        android:hint="@string/debit"
        android:inputType="numberSigned|numberDecimal" />

    <EditText
        android:id="@+id/time_city_calls_edit_text"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="7"
        android:ems="10"
        android:hint="@string/timeCityCalls"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/time_long_distance_calls_edit_text"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="8"
        android:ems="10"
        android:hint="@string/timeLongDistanceCalls"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/execute_button"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="start|end"
        android:layout_row="9"
        android:text="@string/execute" />
</GridLayout>